# obsidian-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.toml.example  prompt.example.md  pyproject.toml
app/: main.py
app/adapters/: index.py  search.py  vault.py
app/domain/exceptions/: config.py  memory.py  vault.py
app/domain/interfaces/: memory.py  note.py  performance.py  search.py  vault.py
app/domain/models/: __init__.py  agent_session.py  base.py  config.py  conversation_note.py  core_note.py  daily_note.py  highlight_note.py  model_pricing.py  notes.py  priority.py  search.py  task_note.py  task_status.py  tool_call_record.py
app/services/: cost_estimator.py  memory.py  performance.py  productivity.py  tasks.py
app/tools/: base.py  memory.py  performance.py  productivity.py  tasks.py
tests/: conftest.py  test_memory.py  test_productivity.py  test_search.py  test_tasks.py  test_vault.py
