[project]
name = "obsidian-mcp"
version = "0.1.0"
description = "MCP server for Obsidian vault as persistent AI memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0",
]

[project.scripts]
obsidian-mcp = "app.main:run"

[project.urls]
Repository = "https://github.com/fufic123/obsidian-mcp"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
